
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int LZ4_compressBound (int) ;
 int LZ4_compress_default (char const*,char*,int,int ) ;

int LZ4_compress(const char* source, char* dest, int inputSize)
{
    return LZ4_compress_default(source, dest, inputSize, LZ4_compressBound(inputSize));
}
